feat(fich): добавлено частичное выполнение привычки
